--- a/style.css
+++ b/style.css
@@ -188,6 +188,8 @@ main section.section2 .phone-and-keyboard {
   height: 100%;
   margin-right: 1.875rem;
   flex-shrink: 0;
+  filter: invert(35%) sepia(60%) saturate(500%) hue-rotate(346deg)
+    brightness(75%) contrast(125%);
 }
 main section.section2 .glass-and-keyboard {
   background: url(./assets/image-glass-and-keyboard.jpg);
